--- a/gfs2/man/gfs2.8
+++ b/gfs2/man/gfs2.8
@@ -14,13 +14,13 @@ command/feature you are looking for.
 gfs2
 GFS2 overview (this man page)
 .TP
-gfs2_mount
+mount.gfs2
 Mounting a GFS2 file system
 .TP
 gfs2_edit
 A GFS2 debug tool (use with caution)
 .TP
-gfs2_fsck
+fsck.gfs2
 The GFS2 file system checker
 .TP
 gfs2_grow
