--- a/gfs2/man/gfs2_grow.8
+++ b/gfs2/man/gfs2_grow.8
@@ -57,4 +57,4 @@ have done were it run without this flag.
 Version. Print out version information, then exit.
 
 .SH SEE ALSO
-gfs2_mkfs(8) gfs2_jadd(8)
+mkfs.gfs2(8) gfs2_jadd(8)
