--- a/gfs2/man/gfs2_jadd.8
+++ b/gfs2/man/gfs2_jadd.8
@@ -57,4 +57,4 @@ Initial size of each journal's unlinked tag file
 Version. Print version information, then exit.
 .
 .SH SEE ALSO
-gfs2_mkfs(8) gfs2_grow(8)
+mkfs.gfs2(8) gfs2_grow(8)
