Add Filesystem UUID to GFS2 utils.
bz #242701

1. Added the ability for gfs2_edit to print the uuid value with
   -p sb and also to show it in the "structures" display.
2. Added the ability for gfs2_tool to print the uuid value with
   "sb"..."all" and "sb"..."uuid" and the ability to change the uuid
   through the same mechanism.
3. Updated the gfs2_tool.8 man page to reflect those changes.
4. This version of mkfs concocts the new uuid randomly, but does not
   allow the users to specify it (the same as mkfs.ext3 and mkfs.xfs)

--- a/gfs2/man/gfs2_tool.8
+++ b/gfs2/man/gfs2_tool.8
@@ -90,6 +90,12 @@ View (and possibly replace) the multihost format number in the
 file system superblock.  The file system shouldn't be mounted by any
 client when you do this.  No one should have to use this.
 .TP
+\fBsb\fP \fIdevice\fR \fBuuid\fP \fI[newvalue]\fR
+View (and possibly replace) the uuid in the file system superblock.
+The file system shouldn't be mounted by any client when you do this.
+The new uuid value should be in the standard uuid format.  For
+example: 1AEA8269-15C5-72BD-6D83-8720B17AA4EE
+.TP
 \fBsb\fP \fIdevice\fR \fBall\fP
 Print out the superblock.
 .TP
