mkfs.gfs2 should support discard request generation
This patch allows mkfs.gfs2 to issue discard ioctls to the underlying
devices.  All the file system blocks are discarded before the file system
is formatted, as was done for other file systems.

rhbz#656956

--- a/gfs2/man/mkfs.gfs2.8
+++ b/gfs2/man/mkfs.gfs2.8
@@ -39,6 +39,11 @@ The number of journals for gfs2_mkfs to create.  You need at least one
 journal per machine that will mount the filesystem.  If this option is
 not specified, one journal will be created.
 .TP
+\fB-K\fP
+Keep, do not attempt to discard blocks at mkfs time (discarding blocks
+initially is useful on solid state devices and  sparse  /  thin-provisioned
+storage).
+.TP
 \fB-O\fP
 This option prevents gfs2_mkfs from asking for confirmation before writing
 the filesystem.
